# vlsi_report_clustering

./: .gitignore  EMBEDDER_API_DEMO.py  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-7-complete.txt
.sisyphus/notepads/vlsi-report-cluster/: completion.md  decisions.md  issues.md  learnings.md  orchestration-complete.md  problems.md
.sisyphus/plans/: vlsi-report-cluster.md
src/vlsi_report_cluster/: __init__.py  __main__.py  cli.py  clusterer.py  config.py  embedder.py  formatter.py  parser.py  template_extractor.py
tests/: conftest.py  run_parser_tests.py  test_cli.py  test_clusterer.py  test_config.py  test_edge_cases.py  test_embedder.py  test_parser.py  test_template_extractor.py  verify_cli_structure.py  verify_pipeline_logic.py
tests/fixtures/: sample_lint.txt  sample_power_intent.txt  sample_report.csv  sample_report.html  tiny_report.txt
